Colaboratory kullanılarak oluşturuldu

--- a/FundaKabaklıPythonNotDefteri.ipynb
+++ b/FundaKabaklıPythonNotDefteri.ipynb
@@ -555,10 +555,9 @@
       "metadata": {
         "id": "Vzg4x_inkN9h",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 130
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cdce25fa-0d05-4632-ec54-d2ee25a87d93"
+        "outputId": "021f640a-5514-4667-8303-8d30078c87bc"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -567,16 +566,22 @@
         "print(type(tamSayi))\n",
         "\n",
         "ondalikSayi = 7.4\n",
-        "print(type(ondalikSayi)"
+        "print(type(ondalikSayi))\n",
+        "\n",
+        "ondalikSayi = 10\n",
+        "print(ondalikSayi)\n",
+        "print(type(ondalikSayi))"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-6cc5e1934bb6>\"\u001b[0;36m, line \u001b[0;32m7\u001b[0m\n\u001b[0;31m    print(type(ondalikSayi)\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'int'>\n",
+            "<class 'float'>\n",
+            "10\n",
+            "<class 'int'>\n"
           ]
         }
       ]
