Colaboratory kullanılarak oluşturuldu

--- a/FundaKabaklıPythonNotDefteri.ipynb
+++ b/FundaKabaklıPythonNotDefteri.ipynb
@@ -572,7 +572,7 @@
         "print(ondalikSayi)\n",
         "print(type(ondalikSayi))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1669,7 +1669,7 @@
         "print(metin[:52])\n",
         "# Çıktı: Python programlama dili, dünyada eğitim amacıyla en"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2379,7 +2379,7 @@
         "ulkeKodlari = (\"TR\", \"US\", \"EN\", \"JP\")\n",
         "print(ulkeKodlari)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2414,7 +2414,7 @@
         "print(konuBasliklari)\n",
         "print(konuBasliklari[3])"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2478,7 +2478,7 @@
         "del adresDefteri [\"Ankara Üniversitesi\"]\n",
         "print(adresDefteri)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2517,7 +2517,7 @@
         "del bilgiBilim [\"semboller\"]\n",
         "print(bilgiBilim)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2578,7 +2578,7 @@
         "\n",
         "print(adresDefteri.keys())"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2626,7 +2626,7 @@
         "\n",
         "sor = input(\"Sen ne eklemek istersin? \")\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2690,7 +2690,7 @@
         "bilgiSozlugu = {\"indeks\": \"index\", \"erişim\": \"access\", \"koleksiyon\": \"collection\"}\n",
         "print(\"koleksiyon\" in bilgiSozlugu.keys())"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2730,7 +2730,7 @@
         "print(\"yayınevi\" in yeniSozluk.keys())\n",
         "print(\"Title\" in yeniSozluk.values())"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2799,7 +2799,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2e6sRcxoayBf"
+        "id": "2e6sRcxoayBf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "66777249-47b8-47fc-85e9-dcef0e87b5c1"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2817,7 +2821,17 @@
         "print(cepTel == \"\" or ePosta == \"orcunmadran@gmail.com\" )"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2831,7 +2845,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XMHB4_dY3B1v"
+        "id": "XMHB4_dY3B1v",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1c2fb760-60cf-43a8-cc36-c8177155fc64"
       },
       "source": [
         "#Sistemde yer alan bilgiler:\n",
@@ -2843,13 +2861,23 @@
         "girKulSifre = input(\"Şifre: \")\n",
         "\n",
         "#Kontrol\n",
-        "\n",
+        "sonuc = (sisKulAdi == girKulAdi and sisKulSifre == girKulSifre)\n",
         "\n",
         "#Sonuç\n",
         "print(sonuc)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Kullanıcı Adı: yönetici\n",
+            "Şifre: bby162\n",
+            "False\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2881,7 +2909,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EERabauFbSBB"
+        "id": "EERabauFbSBB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ed7c6011-6c9a-40bd-d375-7bfdf7d0dcc9"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2891,8 +2923,17 @@
         "if kavram in acikKavramlar:\n",
         "  print(kavram + \" açık kavramlar listesinde yer alıyor!\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bir açık kavramı yazın: bilim\n",
+            "bilim açık kavramlar listesinde yer alıyor!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2906,7 +2947,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-Knt3IBI_BRm"
+        "id": "-Knt3IBI_BRm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "58f2702e-2691-45c5-bfa9-73f7b4a845cf"
       },
       "source": [
         "acikSozluk = {\n",
@@ -2915,11 +2960,21 @@
         "    \"Açık Veri\" : \"Kamu kaynakları ile yapılan araştırma sonucunda üretilen verilere ücretsiz ve yeniden kullanılabilir biçimde erişim\" \n",
         "    }\n",
         "anahtar = input(\"Anahtar Kelime: \")\n",
-        "\n",
+        "if anahtar in acikSozluk.keys() :\n",
+        "  print(acikSozluk[anahtar])\n",
         "#If"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Anahtar Kelime: Açık Bilim\n",
+            "Bilimsel bilgi kamu malıdır. Bilimsel yayınlara ve verilere açık erişim bir haktır.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2957,7 +3012,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hVT2r9_tbnis"
+        "id": "hVT2r9_tbnis",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "633da4bb-c27f-4f39-b347-73915cb103f0"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -2973,8 +3032,17 @@
         "else :\n",
         "  print(\"Kayıtlı bir gün bilgisi girmediniz!\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Gün giriniz: Cuma\n",
+            "Bilimsel İletişim\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2992,14 +3060,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vEFr1ub_thtK"
+        "id": "vEFr1ub_thtK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "72f539af-0973-4157-9a02-3cf76184fe90"
       },
       "source": [
-        "yas = int(input(\"Yaşınızı giriniz: \"))\n",
-        "\n"
+        "try:\n",
+        "  yas = int(input(\"Yaşınızı giriniz: \"))\n",
+        "  if yas<=21 :\n",
+        "    print(\"Sokağa çıkma yasağı bulunmaktadır!\")\n",
+        "  elif yas>=64 :\n",
+        "    print(\"Sokağa çıkma yasağı bulunmaktadır!\")\n",
+        "  else :\n",
+        "    print(\"Sokağa çıkma yasağı yoktur!\")\n",
+        "except ValueError:\n",
+        "  print(\"Yaşınızı rakam olarak giriniz!\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yaşınızı giriniz: nasıııl?\n",
+            "Yaşınızı rakam olarak giriniz!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3131,7 +3220,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VLDA2SWAdUHz"
+        "id": "VLDA2SWAdUHz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6e0aedd9-a504-4335-8ddb-a87765c1ad54"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3141,8 +3234,57 @@
         "for harf in cumle:\n",
         "    print(harf)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "B\n",
+            "i\n",
+            "s\n",
+            "i\n",
+            "k\n",
+            "l\n",
+            "e\n",
+            "t\n",
+            " \n",
+            "h\n",
+            "e\n",
+            "m\n",
+            " \n",
+            "z\n",
+            "i\n",
+            "h\n",
+            "n\n",
+            "i\n",
+            ",\n",
+            " \n",
+            "h\n",
+            "e\n",
+            "m\n",
+            " \n",
+            "b\n",
+            "e\n",
+            "d\n",
+            "e\n",
+            "n\n",
+            "i\n",
+            " \n",
+            "d\n",
+            "i\n",
+            "n\n",
+            "ç\n",
+            " \n",
+            "t\n",
+            "u\n",
+            "t\n",
+            "a\n",
+            "r\n",
+            "!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3246,7 +3388,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xXDmHHe2TVLJ"
+        "id": "xXDmHHe2TVLJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4cd48279-d00c-42eb-829e-3d5430c219c9"
       },
       "source": [
         "# Örnek Uygulamayı çalıştır\n",
@@ -3259,8 +3405,20 @@
         "    if sayi >= 5:\n",
         "        break"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
