Colaboratory kullanılarak oluşturuldu

--- a/FundaKabaklıPythonNotDefteri.ipynb
+++ b/FundaKabaklıPythonNotDefteri.ipynb
@@ -2866,7 +2866,7 @@
         "#Sonuç\n",
         "print(sonuc)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2923,7 +2923,7 @@
         "if kavram in acikKavramlar:\n",
         "  print(kavram + \" açık kavramlar listesinde yer alıyor!\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2964,7 +2964,7 @@
         "  print(acikSozluk[anahtar])\n",
         "#If"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3032,7 +3032,7 @@
         "else :\n",
         "  print(\"Kayıtlı bir gün bilgisi girmediniz!\")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3064,21 +3064,22 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "72f539af-0973-4157-9a02-3cf76184fe90"
+        "outputId": "1c06b022-316d-4b46-fe95-370d4dd23da9"
       },
       "source": [
-        "try:\n",
-        "  yas = int(input(\"Yaşınızı giriniz: \"))\n",
-        "  if yas<=21 :\n",
+        "yas = input(\"Yaşınızı giriniz: \")\n",
+        "if yas.isdigit():\n",
+        "  yas = int(yas)\n",
+        "  if yas <= 21 :\n",
         "    print(\"Sokağa çıkma yasağı bulunmaktadır!\")\n",
-        "  elif yas>=64 :\n",
+        "  elif yas >= 64 :\n",
         "    print(\"Sokağa çıkma yasağı bulunmaktadır!\")\n",
         "  else :\n",
         "    print(\"Sokağa çıkma yasağı yoktur!\")\n",
-        "except ValueError:\n",
+        "else:\n",
         "  print(\"Yaşınızı rakam olarak giriniz!\")"
       ],
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -3157,7 +3158,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Uikl2CnDc8rE"
+        "id": "Uikl2CnDc8rE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "db36ef5f-0778-43cc-e9f7-1772c88da87c"
       },
       "source": [
         "# Örnek uygulmayı çalıştır\n",
@@ -3168,7 +3173,17 @@
         "    print(konu)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Açık Bilim\n",
+            "Açık Erişim\n",
+            "Açık Veri\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3182,13 +3197,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ry1L7GJ_J_wZ"
+        "id": "ry1L7GJ_J_wZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "de60e803-80f1-4693-8591-642e69e7add0"
       },
       "source": [
-        "#liste\n"
+        "#liste\n",
+        "liste = [\"Sonsuz Öğrenme\", \"Veri Bilimi\", \"Makerspaces\", \"Kullanıcı Deneyimi Araştırmaları\", \"İhtiyaç Analizi\", \"Gizlilik ve Siber Güvenlik\", \"Etki Planlama ve Değerlendirme\", \"Bibliyometri\"]\n",
+        "for bilgiErisim in liste:\n",
+        "  print(bilgiErisim)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sonsuz Öğrenme\n",
+            "Veri Bilimi\n",
+            "Makerspaces\n",
+            "Kullanıcı Deneyimi Araştırmaları\n",
+            "İhtiyaç Analizi\n",
+            "Gizlilik ve Siber Güvenlik\n",
+            "Etki Planlama ve Değerlendirme\n",
+            "Bibliyometri\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3234,7 +3271,7 @@
         "for harf in cumle:\n",
         "    print(harf)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3298,13 +3335,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "83a-E21mMEUr"
+        "id": "83a-E21mMEUr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0d22feaa-9fc8-47b7-987b-a13634fa189a"
       },
       "source": [
-        "#degisken\n"
+        "#degisken\n",
+        "degisken = \"İyi ki varsın!\"\n",
+        "for yazdir in degisken:\n",
+        "  print(yazdir)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "İ\n",
+            "y\n",
+            "i\n",
+            " \n",
+            "k\n",
+            "i\n",
+            " \n",
+            "v\n",
+            "a\n",
+            "r\n",
+            "s\n",
+            "ı\n",
+            "n\n",
+            "!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3339,7 +3404,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GTRNt3f4dxaZ"
+        "id": "GTRNt3f4dxaZ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f40d18bd-aaa6-439a-87bc-3a53f9420e22"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3353,7 +3422,25 @@
         "print(\"Program bitti\")"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "Program bitti\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3405,7 +3492,7 @@
         "    if sayi >= 5:\n",
         "        break"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3450,7 +3537,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "8kRu3DpFT4pe"
+        "id": "8kRu3DpFT4pe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b118fb82-3ba3-4b5b-8656-f4177c231708"
       },
       "source": [
         "# Örnek Uygulamayı çalıştır\n",
@@ -3460,8 +3551,19 @@
         "        continue\n",
         "    print(i)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3477,15 +3579,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aPxS3byjrjEN"
+        "id": "aPxS3byjrjEN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0c147f8b-b079-4a60-ec30-82102183b8a8"
       },
       "source": [
         "#Tahmin Oyunu\n",
         "kelime = \"bilgi\"\n",
-        "tahmin = \"\""
+        "tahmin = input(\"Veri, information, knowledge gibi anlamlara da sahip olan kelime nedir? = \").lower()\n",
+        "while tahmin != kelime:\n",
+        "  tahmin = input(\"Yanıtınız yanlış, yeniden deneyiniz: \")\n",
+        "print(\"Bildiniz..!\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Veri, information, knowledge gibi anlamlara da sahip olan kelime nedir? = data\n",
+            "Yanıtınız yanlış, yeniden deneyiniz: bilgelik\n",
+            "Yanıtınız yanlış, yeniden deneyiniz: vukuf\n",
+            "Yanıtınız yanlış, yeniden deneyiniz: bilgi\n",
+            "Bildiniz..!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
