Colaboratory kullanılarak oluşturuldu

--- a/FundaKabaklıPythonNotDefteri.ipynb
+++ b/FundaKabaklıPythonNotDefteri.ipynb
@@ -3079,7 +3079,7 @@
         "else:\n",
         "  print(\"Yaşınızı rakam olarak giriniz!\")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3144,7 +3144,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZIm4g511cyvz"
+        "id": "ZIm4g511cyvz",
+        "outputId": "ae582eba-6fe2-4ebe-c9db-d0e21df2a456",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Örnek uygulmayı çalıştır\n",
@@ -3153,7 +3157,19 @@
         "    print(i)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -3347,7 +3363,7 @@
         "for yazdir in degisken:\n",
         "  print(yazdir)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3551,7 +3567,7 @@
         "        continue\n",
         "    print(i)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3593,7 +3609,7 @@
         "  tahmin = input(\"Yanıtınız yanlış, yeniden deneyiniz: \")\n",
         "print(\"Bildiniz..!\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3648,7 +3664,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iwMnSTNMevh8"
+        "id": "iwMnSTNMevh8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "70867217-3a17-4765-eb12-44984c88e536"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3660,7 +3680,19 @@
         "    merhaba_dunya()   # fonksiyon 5 kere çağırılacak"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Merhaba Dünya!\n",
+            "Merhaba Dünya!\n",
+            "Merhaba Dünya!\n",
+            "Merhaba Dünya!\n",
+            "Merhaba Dünya!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3692,7 +3724,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "i2IW-s8wfB3e"
+        "id": "i2IW-s8wfB3e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ccbb5464-1625-4020-8de8-cb8c439891f1"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3703,7 +3739,15 @@
         "foo(5)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "x = 5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3717,15 +3761,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BKerIDjcpfyE"
+        "id": "BKerIDjcpfyE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "33358c53-7a85-4c44-e914-533cf7792ac7"
       },
       "source": [
         "def karsila(kAd, kSoyad):\n",
         "  print(\"Hoşgeldin, %s %s\" % (kAd, kSoyad))\n",
-        "\n"
+        "\n",
+        "print(karsila(\"Güzel\", \"İnsan\"))"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hoşgeldin, Güzel İnsan\n",
+            "None\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3757,7 +3815,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xRukn_KfrsA3"
+        "id": "xRukn_KfrsA3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "58ccf9b7-0b56-40b5-d86e-ce8b44898e6e"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3768,7 +3830,15 @@
         "print(iki_sayi_topla(3, 12))"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3801,7 +3871,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gy_5nrP6hHOR"
+        "id": "Gy_5nrP6hHOR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fb2431ae-c8a6-4a8e-cd64-860aa9b6eb2d"
       },
       "source": [
         "# Örnek uygulamayı çalıştır\n",
@@ -3813,7 +3887,16 @@
         "print(iki_sayi_carp(3))"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "141\n",
+            "6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3834,7 +3917,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "W4Z_Rgl_hq1t"
+        "id": "W4Z_Rgl_hq1t",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "334c3c60-9bf5-4d15-fe0e-5526438e91d7"
       },
       "source": [
         "#Sayısal Loto örnek uygulama (fonksiyonsuz)\n",
@@ -3852,12 +3939,29 @@
         "    i=0"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[15, 18, 19, 20, 22, 45]\n",
+            "[4, 12, 15, 19, 33, 49]\n",
+            "[3, 13, 29, 33, 37, 48]\n",
+            "[8, 10, 11, 30, 32, 47]\n",
+            "[3, 8, 17, 24, 27, 35]\n",
+            "[3, 6, 10, 25, 42, 43]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PRtF6Bd_b2Xg"
+        "id": "PRtF6Bd_b2Xg",
+        "outputId": "42d672dc-2398-4cee-ad9e-74b13da19d85",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "#Sayısal Loto örnek uygulama (fonksiyonlu)\n",
@@ -3879,7 +3983,20 @@
         "tahminEt(10,6,1,60)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[7, 10, 19, 24, 31, 40, 41, 51, 54, 55]\n",
+            "[3, 6, 8, 9, 11, 12, 26, 28, 37, 43]\n",
+            "[18, 19, 23, 31, 35, 36, 40, 52, 53, 58]\n",
+            "[7, 9, 13, 16, 24, 26, 27, 34, 39, 51]\n",
+            "[5, 6, 20, 22, 23, 29, 30, 44, 53, 60]\n",
+            "[12, 14, 25, 27, 29, 30, 38, 43, 48, 52]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3936,13 +4053,93 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JfxS1H8rEKuR"
+        "id": "JfxS1H8rEKuR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "142695e1-8a78-4453-8c06-788386aaf77d"
       },
       "source": [
-        "#Fonksiyonlu Adam Asmaca\n"
+        "#Fonksiyonlu Adam Asmaca\n",
+        "def adam():\n",
+        "  from random import choice\n",
+        "\n",
+        "  adamCan = 3\n",
+        "\n",
+        "  kelimeler = [\"bisiklet\", \"triatlon\", \"yüzme\", \"koşu\"]\n",
+        "  secilenKelime = choice(kelimeler)\n",
+        "  print(secilenKelime)\n",
+        "  dizilenKelime = []\n",
+        "  for diz in secilenKelime:\n",
+        "      dizilenKelime.append(\"_\")\n",
+        "  print(dizilenKelime)\n",
+        "\n",
+        "  while adamCan > 0:\n",
+        "      girilenHarf = input(\"Bir harf giriniz: \")\n",
+        "      canKontrol = girilenHarf in secilenKelime\n",
+        "      if canKontrol == False:\n",
+        "          adamCan-=1\n",
+        "      i = 0\n",
+        "      for kontrol in secilenKelime:\n",
+        "          if secilenKelime[i] == girilenHarf:\n",
+        "              dizilenKelime[i] = girilenHarf\n",
+        "          i+=1\n",
+        "      print(dizilenKelime)\n",
+        "      print(\"Kalan can: \"+ str(adamCan))\n",
+        "\n",
+        "adam()\n",
+        "\n",
+        "while True:\n",
+        "  tekrar = input(\"Tekrar oynamak ister misiniz? (e/h) \")\n",
+        "  if tekrar == \"e\":\n",
+        "    adam()\n",
+        "  else:\n",
+        "    print(\"Program Sonlandırılıyor...\")\n",
+        "    break"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "yüzme\n",
+            "['_', '_', '_', '_', '_']\n",
+            "Bir harf giriniz: a\n",
+            "['_', '_', '_', '_', '_']\n",
+            "Kalan can: 2\n",
+            "Bir harf giriniz: u\n",
+            "['_', '_', '_', '_', '_']\n",
+            "Kalan can: 1\n",
+            "Bir harf giriniz: e\n",
+            "['_', '_', '_', '_', 'e']\n",
+            "Kalan can: 1\n",
+            "Bir harf giriniz: s\n",
+            "['_', '_', '_', '_', 'e']\n",
+            "Kalan can: 0\n",
+            "Tekrar oynamak ister misiniz? (e/h) e\n",
+            "triatlon\n",
+            "['_', '_', '_', '_', '_', '_', '_', '_']\n",
+            "Bir harf giriniz: a\n",
+            "['_', '_', '_', 'a', '_', '_', '_', '_']\n",
+            "Kalan can: 3\n",
+            "Bir harf giriniz: e\n",
+            "['_', '_', '_', 'a', '_', '_', '_', '_']\n",
+            "Kalan can: 2\n",
+            "Bir harf giriniz: o\n",
+            "['_', '_', '_', 'a', '_', '_', 'o', '_']\n",
+            "Kalan can: 2\n",
+            "Bir harf giriniz: u\n",
+            "['_', '_', '_', 'a', '_', '_', 'o', '_']\n",
+            "Kalan can: 1\n",
+            "Bir harf giriniz: s\n",
+            "['_', '_', '_', 'a', '_', '_', 'o', '_']\n",
+            "Kalan can: 0\n",
+            "Tekrar oynamak ister misiniz? (e/h) h\n",
+            "Program Sonlandırılıyor...\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
